src/flake8_quotes/snapshots/ruff__flake8_quotes__checks__tests__double_docstring_docstring_doubles_class.py.snap
---
source: src/flake8_quotes/checks.rs
expression: checks
---
- kind:
    BadQuotesMultilineString: single
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 28
  fix: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 5
    column: 23
  end_location:
    row: 5
    column: 44
  fix: ~

