src/flake8_quotes/snapshots/ruff__flake8_quotes__checks__tests__double_docstring_docstring_doubles_function.py.snap
---
source: src/flake8_quotes/checks.rs
expression: checks
---
- kind:
    BadQuotesMultilineString: single
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 27
  fix: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 11
    column: 5
  end_location:
    row: 11
    column: 27
  fix: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 15
    column: 39
  end_location:
    row: 17
    column: 4
  fix: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 17
    column: 5
  end_location:
    row: 17
    column: 20
  fix: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 21
    column: 5
  end_location:
    row: 21
    column: 28
  fix: ~

