src/flake8_quotes/snapshots/ruff__flake8_quotes__checks__tests__double_docstring_docstring_doubles_module_singleline.py.snap
---
source: src/flake8_quotes/checks.rs
expression: checks
---
- kind:
    BadQuotesMultilineString: single
  location:
    row: 2
    column: 1
  end_location:
    row: 2
    column: 32
  fix: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 6
    column: 1
  end_location:
    row: 6
    column: 32
  fix: ~

