src/flake8_quotes/snapshots/ruff__flake8_quotes__checks__tests__double_docstring_docstring_singles.py.snap
---
source: src/flake8_quotes/checks.rs
expression: checks
---
- kind:
    BadQuotesDocstring: double
  location:
    row: 1
    column: 1
  end_location:
    row: 3
    column: 4
  fix: ~
- kind:
    BadQuotesDocstring: double
  location:
    row: 14
    column: 5
  end_location:
    row: 16
    column: 8
  fix: ~
- kind:
    BadQuotesDocstring: double
  location:
    row: 26
    column: 9
  end_location:
    row: 28
    column: 12
  fix: ~

