src/flake8_quotes/snapshots/ruff__flake8_quotes__checks__tests__double_docstring_docstring_singles_module_singleline.py.snap
---
source: src/flake8_quotes/checks.rs
expression: checks
---
- kind:
    BadQuotesDocstring: double
  location:
    row: 1
    column: 1
  end_location:
    row: 1
    column: 50
  fix: ~

