src/flake8_quotes/snapshots/ruff__flake8_quotes__checks__tests__doubles_doubles.py.snap
---
source: src/flake8_quotes/checks.rs
expression: checks
---
- kind:
    BadQuotesInlineString: single
  location:
    row: 1
    column: 25
  end_location:
    row: 1
    column: 46
  fix: ~
- kind:
    BadQuotesInlineString: single
  location:
    row: 2
    column: 25
  end_location:
    row: 2
    column: 47
  fix: ~

