src/flake8_quotes/snapshots/ruff__flake8_quotes__checks__tests__doubles_doubles_escaped.py.snap
---
source: src/flake8_quotes/checks.rs
expression: checks
---
- kind: AvoidQuoteEscape
  location:
    row: 1
    column: 26
  end_location:
    row: 1
    column: 48
  fix: ~

